2_private-ingress/private-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: back-end-ingress-service
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: nginx-backend
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /sandbox
            backend:
              serviceName: sandbox-cluster-ip-service
              servicePort: 8080
